<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailMovieActivity">

    <ImageView
        android:id="@+id/img_photo"
        android:layout_width="184dp"
        android:layout_height="266dp"
        android:layout_marginBottom="255dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/poster_naruto_shipudden"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_judul"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:text="@string/title"
        android:textColor="@android:color/black"
        android:textSize="10pt"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/img_photo"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/judul"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:text="@string/movie_name"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@id/img_photo"
        app:layout_constraintTop_toBottomOf="@id/tv_judul"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/tv_genre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:text="@string/genre"
        android:textColor="@android:color/black"
        android:textSize="10pt"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/img_photo"
        app:layout_constraintTop_toBottomOf="@id/judul"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/genre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:text="@string/movie_genre"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@id/img_photo"
        app:layout_constraintTop_toBottomOf="@id/tv_genre"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/tv_deskripsi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:text="@string/deskripsi"
        app:layout_constraintTop_toBottomOf="@id/img_photo"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"

        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/deskripsi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:text="@string/deskripsi"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/tv_deskripsi"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>